# Age-Face-Recognition-App

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yaml
deployment/: docker-compose.yaml  entrypoint.sh
experiments/current_experiment/: constants.py
experiments/current_experiment/augmentation/: augmentation.py
experiments/current_experiment/datasets/: datasets.py
experiments/current_experiment/feature_extraction/: feature_extraction.py  texture_analysis.py
experiments/current_experiment/models/: face_det.py  models.py
experiments/current_experiment/notebooks/: preprocessing.ipynb  training.ipynb
experiments/current_experiment/notebooks/.ipynb_checkpoints/: training-checkpoint.ipynb
monitoring/: monitoring.py
nginx/: nginx.conf
proj_requirements/: prod_requirements.txt
rest/: controllers.py  settings.py
tests/ml/:  test_nn.py
tests/rest/: test_controllers.py
