[tool.poetry]
name = "face-recognition-rt-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
opencv-python = "^4.8.0.76"
fastapi = "^0.103.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
