[tool.poetry]
name = "face-recognition-rt-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
opencv-python = "^4.8.0.76"
fastapi = "^0.103.0"
pillow = "^10.0.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
jupyter = "^1.0.0"
poetry = "^1.6.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
